# ai-books-portal

./: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker.yml  lint.yml  release.yml  test.yml
books_portal/infrastructure/services/: auth.py  cache.py  email.py  metrics.py  notifications.py  search.py  storage.py
migrations/: env.py
migrations/versions/: 2025_01_21_2129-005bc112fda7_initial_migration.py
monitoring/: docker-compose.yml
monitoring/grafana/dashboards/: books-portal.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml
src/books_portal/: main.py
src/books_portal/api/v1/: api.py
src/books_portal/api/v1/dependencies/: auth.py
src/books_portal/api/v1/endpoints/: auth.py  authors.py  books.py  comments.py  publishers.py  reports.py  users.py
src/books_portal/api/v1/schemas/: auth.py  authors.py  books.py  comments.py  publishers.py  reports.py  users.py
src/books_portal/application/use_cases/: base.py
src/books_portal/domain/entities/: base.py  book.py  user.py
src/books_portal/infrastructure/config/: settings.py
src/books_portal/infrastructure/database/: models.py
src/books_portal/infrastructure/services/: reports.py  telegram.py
tests/: conftest.py
tests/api/v1/: test_auth.py  test_authors.py  test_books.py  test_comments.py  test_publishers.py  test_users.py
tests/services/: test_auth.py  test_cache.py  test_email.py  test_search.py  test_storage.py
(+38 files in other folders)
